# multiplayer-cards

./: .editorconfig  .gitignore  README.md  websocket-message.json  websocket-response.json
backend/: Cargo.toml
backend/src/: auth.rs  db_utils.rs  game.rs  lib.rs  message.rs  requests.rs  utils.rs
backend/src/game/: deck.rs  player.rs
deployment/: .npmignore  cdk.json  config.example.json  config.json  package.json  tsconfig.json
deployment/lib/: multiplayer-cards-stack.ts
mobile/: .gitignore  build.gradle.kts  deps.kproject.yml  gradle.properties  icon.svg.import  node_2d.tscn  project.godot  settings.gradle.kts
mobile/androidApp/: build.gradle.kts
mobile/androidApp/src/main/java/com/jackchap/multiplayercards/android/: MainActivity.kt  MyApplicationTheme.kt
mobile/game/: Game.kt
mobile/game/card/: Card.kt  card.tscn
mobile/game/card/assets/: back_frame.tres  card_front_frames.tres  card_sheet.png.import  card_special_frames.tres
mobile/game/network/: ConnectionManager.kt  HttpClient.kt
mobile/game/network/model/: AuthResponse.kt  CoreTypes.kt  HttpGameRequestResponse.kt  Vector2Serializer.kt  WebsocketMessage.kt  WebsocketResponse.kt
mobile/game/scene/: ButtonContainer.kt  MainMenu.kt  main_menu.tres  main_menu.tscn  table_scene.tscn
mobile/game/scene/card/: Card.kt  card.tscn
mobile/game/scene/card/assets/: back_frame.tres  card_front_frames.tres  card_sheet.png.import  card_special_frames.tres
mobile/game/stack/: Stack.kt  stack.tscn
mobile/game/util/: ResourceConstants.kt
mobile/gdj/: Game.gdj
mobile/gdj/com/jackchap/multiplayercards/: Simple.gdj
mobile/gdj/network/: ConnectionManager.gdj
mobile/gdj/scene/: ButtonContainer.gdj  MainMenu.gdj
mobile/gdj/scene/card/: Card.gdj  Stack.gdj
mobile/graal/: ktor-config.json
mobile/gradle/: libs.versions.toml
mobile/shared/: build.gradle.kts
mobile/shared/src/androidMain/kotlin/com/jackchap/multiplayercards/: Platform.android.kt
mobile/shared/src/commonMain/kotlin/com/jackchap/multiplayercards/: Greeting.kt  Platform.kt
mobile/shared/src/iosMain/kotlin/com/jackchap/multiplayercards/: Platform.ios.kt
mobile/src/commonMain/kotlin/: main.kt
mobile/src/commonMain/kotlin/com/jackchap/multiplayercards/models/: Card.kt  WebsocketModels.kt
mobile/src/commonMain/kotlin/com/jackchap/multiplayercards/network/: WebsocketClient.kt
mobile/src/commonMain/kotlin/com/jackchap/multiplayercards/scenes/: GameScene.kt  LoginScene.kt
mobile/src/commonMain/kotlin/com/jackchap/multiplayercards/ui/: CardView.kt  HandView.kt  StackView.kt  Utils.kt
mobile/src/main/kotlin/com/jackchap/multiplayercards/: Simple.kt
