[package]
name = "multiplayer_cards"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws_lambda_events = { version = "0.16.0"}
aws-sdk-apigatewaymanagement = "1"
aws-sdk-dynamodb = { version = "1" }
jsonwebtoken = "9"
lambda_http = { version = "0.14.0", features = ["anyhow"] }
lambda_runtime = { version = "0.13.0"}
rand = "0.9"
schemars = { version = "1.0.0-alpha" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
strip = true
lto = "thin"

[[bin]]
name = "http"
path = "src/bin/http.rs"

[[bin]]
name = "websocket_handler"
path = "src/bin/websocket_handler.rs"

[[bin]]
name = "lambda-authorizer"
path = "src/bin/authorizer.rs"
